--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,8 +1,7 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'QWT_ANALYTICS'
 version: '1.0.0'
 config-version: 2
 
@@ -24,6 +23,10 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
+vars:
+  v_city: "'Berlin' , 'London' , 'Madrid'"
+  dbt_dq_tool_schema: "{{env_var('DBT_AUDITSCHEMA','AUDITING')}}"
+  dq_tools_enable_store_test_results: True
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -34,9 +37,26 @@ clean-targets:         # directories to be removed by `dbt clean`
 # instead be materialized as tables. Any models you add to the root of the models folder will 
 # continue to be built as views. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
+seeds : 
+   schema : lookup
 
+
+on-run-start: "use warehouse loading_wh;"
+on-run-end:
+  - '{{ dq_tools.store_test_results(results) }}'
+  
 models:
-  my_new_project:
+  qwt_analytics:
     # Applies to all files under models/example/
     example:
       +materialized: table
+
+
+   
+  +pre-hook:
+    - "insert into database: {{env_var('DBT_SOURCEDB','QWT_ANALYTICS')}}.{{env_var('DBT_AUDITSCHEMA','AUDITING')}}.models_audit(modelname, starttime, endtime, duration) values ('{{this}}', current_timestamp, null, null);"
+  +post-hook:
+    - "update {{env_var('DBT_SOURCEDB','QWT_ANALYTICS')}}.{{env_var('DBT_AUDITSCHEMA','AUDITING')}}.models_audit set endtime= current_timestamp,duration=datediff('second',starttime,current_timestamp) where modelname='{{this}}' and endtime is null"
+  
+  dq_tools:
+    +schema: "{{env_var('DBT_AUDITSCHEMA','AUDITING')}}"
