--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,7 @@
 packages:
   - package: calogica/dbt_date
     version: 0.10.1
+  - package: infinitelambda/dq_tools
+    version: 1.8.0
+  - package: dbt-labs/dbt_utils
+    version: 1.3.0
